# qina_ru_shi

./: .codex-init  .gitattributes  .gitignore  LICENSE  README-CN.md  README.md  软件系统架构图.md
communication_base/: CMakeLists.txt  package.xml
communication_base/config/: ekf.yaml  ekf_slam_toolbox.yaml  robot_model.yaml  wheeltec_param.yaml  wheeltec_param_back.yaml
communication_base/include/communication_base/: wheeltec_robot.h
communication_base/include/serial/: serial.h
communication_base/launch/: base_serial.launch.py  communication_base.launch.py  robot_mode_description.launch.py  wheeltec_camera.launch.py  wheeltec_ekf.launch.py  wheeltec_lidar.launch.py  wheeltec_sensors.launch.py
communication_base/src/: Quaternion_Solution.cpp  wheeltec_robot.cpp
diagrams/: fig2-5_architecture.mmd  fig2-5b_layered.mmd  fig2-6_task_flow.mmd  package-lock.json  package.json  puppeteer-config.json
jie_ware/: CMakeLists.txt  README.md  package.xml
jie_ware/launch/: lidar_loc.launch.py
jie_ware/src/: costmap_cleaner.cpp  lidar_filter_node.cpp  lidar_loc.cpp
key_control/: package.xml  setup.cfg  setup.py
key_control/key_control/: key_control.py  key_control_launch.py
key_control/launch/: key_control.launch.py
key_control/resource/: key_control
mini_4wd_six_arm/: CMakeLists.txt  package.xml
mini_4wd_six_arm/config/: joint_names_mini_4wd_six_arm.yaml
nav2_qing/: CMakeLists.txt  package.xml  qing_slam_map.pgm
nav2_qing/config/: semantic_locations.yaml
nav2_qing/launch/: bringup_launch.py  nav2_qing.launch.py  save_map.launch.py
nav2_qing/map/: qing_slam_map.before_hospital_walls.pgm  qing_slam_map.pbstream  qing_slam_map.pgm  qing_slam_map.yaml
nav2_qing/param/: nav2_qing_4wd.yaml  slam_toolbox_localization.yaml
nav2_qing/rviz/: nav2_qing.rviz
onenet_bridge/: CMakeLists.txt  package.xml
onenet_bridge/config/: onenet_bridge.yaml
onenet_bridge/launch/: onenet_bridge.launch.py
onenet_bridge/src/: onenet_bridge_node.cpp
p2117_ros/: CMakeLists.txt  README.md  README_en.md  package_ros1.xml  package_ros2.xml
p2117_ros/launch/: ms200_pointcloud.launch  ms200_pointcloud.launch.py  ms200_pointcloud_view.launch  ms200_pointcloud_view.launch.py  ms200_scan.launch.py  oradar_laser.launch.py
p2117_ros/rviz/: oradar_pointcloud.rviz
p2117_ros/rviz2/: oradar_pointcloud.rviz
p2117_ros/sdk/src/: ord_lidar_driver.cpp
p2117_ros/src/: oradar_pointcloud_node.cpp  oradar_scan_node.cpp  scan_mask_filter.cpp
qing_robot_msgs/: CMakeLists.txt  package.xml
qing_robot_msgs/msg/: UltrasonicArray.msg
robot_ai/: package.xml  setup.cfg  setup.py
robot_ai/config/: params.yaml
robot_ai/launch/: robot_ai.launch.py
robot_ai/robot_ai/: hello_text_test.py  mic_test.py  voice_chat_node.py
robot_arm/: CMakeLists.txt  package.xml
robot_arm/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  table_streeing_arm.ros2_control.xacro  table_streeing_arm.srdf  table_streeing_arm.urdf.xacro
robot_arm/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robot_arm/scripts/: start_moveit_demo_clean.sh
robot_arm_control/: CMakeLists.txt  README.md  VISUAL_ARM_TRACKING.md  package.xml
robot_arm_control/config/: medicine_detect_params.yaml
robot_arm_control/launch/: arm_pick_color.launch.py  medicine_detect.launch.py  medicine_detect_only.launch.py
robot_arm_control/msg/: PickAndPut.msg  SixArmPosition.msg
robot_arm_control/scripts/: arm_phase_publisher.py  car_location_color.py  direct_arm_pick_and_put.py  grasp_guide_overlay.py  serial_bridge.py  visual_tracker.py
robot_arm_pick/: CMakeLists.txt  package.xml
robot_arm_pick/cfg/: Params_color.cfg  params.cfg
robot_arm_pick/config/: pick_color_params.yaml
robot_arm_pick/include/wheeltec_four_arm_pick/: arm_pick_and_put.h  car_location_color.h  quaternion_solution.h  test_param.h  wheeltec_robot_and_arm.h
robot_arm_pick/include/wheeltec_six_arm_pick/: arm_pick_and_put.h  car_location_color.h  quaternion_solution.h  test_param.h  voice_control.h  wheeltec_arm_six.h
robot_arm_pick/launch/: arm_pick_color.launch  arm_pick_color.launch.py  arm_pick_dp.launch  base_serial.launch  car_location_color.launch  color_hsv_adjust.launch  test_param.launch  virtual_space_bostacle_avoidance.launch  visualTracker.launch  voice_control_arm.launch  voice_init.launch
robot_arm_pick/launch/include/: voi_arm_pick_color.launch  voi_cartesian_demo.launch  voi_color_tracking.launch  voi_demo.launch  voi_face_tracking.launch  voi_fk_demo.launch  voi_gesture_recognition.launch  voi_ik_demo.launch
robot_arm_pick/scripts/: color_hsv_adjust.py  four_arm_visualTracker.py  medicine_detector_node.py  six_arm_visualTracker.py
robot_arm_pick/src/wheeltec_four_arm_pick/: arm_pick_and_put.cpp  arm_pick_and_put_dp.cpp  car_location_color.cpp  quaternion_solution.cpp  test_param.cpp  wheeltec_robot_and_arm.cpp
robot_arm_pick/src/wheeltec_six_arm_pick/: arm_node_feedback.cpp  arm_pick_and_put.cpp  car_location_color.cpp  preset.cpp  quaternion_solution.cpp  test_param.cpp  voice_control.cpp  wheeltec_arm_six.cpp
robot_car_web/: CMakeLists.txt  package.xml
robot_car_web/launch/: car_web.launch.py
robot_car_web/src/: car_web_node.cpp
slam_cartgorpher/: CMakeLists.txt  README.md  package.xml
slam_cartgorpher/config/: cartographer_2d.lua  cartographer_2d_localization.lua
slam_cartgorpher/launch/: cartographer_localization.launch.py  cartographer_mapping.launch.py  save_map.launch.py
slam_cartgorpher/map/: qing_slam_map.pbstream  qing_slam_map.pgm  qing_slam_map.yaml
slam_cartgorpher/rviz/: cartographer.rviz
voice_nav_control/: package.xml  setup.cfg  setup.py
voice_nav_control/launch/: voice_nav_launch.py
voice_nav_control/params/: voice_nav_params.yaml
voice_nav_control/voice_nav_control/: goal_pose_bridge.py  medicine_delivery_task.py  voice_nav_control.py
(+2 files in other folders)
