<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_qing</name>
  <version>0.0.1</version>
  <description>Competition-oriented Nav2 package for a four-wheel differential robot.</description>
  <maintainer email="sunrise@example.com">sunrise</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_bringup</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_smac_planner</depend>
  <depend>nav2_mppi_controller</depend>
  <depend>nav2_rotation_shim_controller</depend>
  <exec_depend>communication_base</exec_depend>
  <exec_depend>oradar_lidar</exec_depend>
  <exec_depend>jie_ware</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
