<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_arm_pick</name>
  <version>1.0.0</version>
  <description>ROS 2 六自由度机械臂色块夹取功能包 (原 wheeltec_arm_pick)</description>
  <maintainer email="3292711291@qq.com">xiao_qing</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>astra_camera</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>robot_arm</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
