<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_nav_control</name>
  <version>0.0.1</version>
  <description>Voice-based motion control and fixed-point navigation for the robot.</description>
  <maintainer email="sunrise@example.com">sunrise</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_qing</exec_depend>
  <exec_depend>robot_arm_control</exec_depend>
  <exec_depend>oradar_lidar</exec_depend>
  <exec_depend>communication_base</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
